# pymetamodels

./: .gitignore  .readthedocs.yaml  LICENSE.md  README.md  authors.rst  requirements_docs.txt  setup.cfg
docs/: .gitignore  001 DataScience.bib  0_Bibliography.rst  0_Glossary.rst  CHANGELOG.md  _00_lib_gen.rst  _00_pymetamodels.rst  _00_pymetamodels_configuration.rst  _01_tutoriales.rst  authors.rst  changelog_index.md  conf.py  conf_lib.py  index.rst  license.rst  subtitutions.txt
docs/_data/: Images_A.xls  Tables.xls  Tables_per_sheet_01.xls
docs/_examples/: .gitignore
docs/_static/: custom.js  custom_js.css
docs/documents/: inputs.xls
docs/images/: .gitignore  coupon_tension.inc  damped_oscillator.inc  diagram_damped.inc  multi_3Dplot_XYZplt_case_1_Y_X1_X2.inc  multi_3Dplot_XYZplt_case_1_Y_X2_X3.inc  multi_3Dplot_XYZplt_case_1_kursawe1_X1_X2.inc  multi_3Dplot_XYZplt_case_1_kursawe1_X1_X3.inc  multi_3Dplot_XYZplt_case_1_kursawe1_X2_X3.inc  multi_3Dplot_XYZplt_case_1_kursawe2_X1_X2.inc  multi_3Dplot_XYZplt_case_2_w_{damped}_k_E_{kin}.inc  multi_3Dplot_XYZplt_case_2_w_{damped}_m_D.inc  multi_3Dplot_XYZplt_case_2_w_{damped}_m_E_{kin}.inc  multi_3Dplot_XYZplt_case_2_w_{damped}_m_k.inc  multi_3Dplot_XYZplt_case_2_x_{max}_D_E_{kin}.inc  multi_3Dplot_XYZplt_case_2_x_{max}_k_D.inc  multi_3Dplot_XYZplt_case_2_x_{max}_k_E_{kin}.inc  multi_3Dplot_XYZplt_case_2_x_{max}_m_D.inc  multi_3Dplot_XYZplt_case_2_x_{max}_m_E_{kin}.inc  multi_3Dplot_XYZplt_case_2_x_{max}_m_k.inc  multi_barplot_sensi_case_0_Y.inc  multi_barplot_sensi_case_1_kursawe1.inc  multi_barplot_sensi_case_1_kursawe2.inc  multi_plot_XYplt_residuals_case_1_Y.inc  multi_plot_XYplt_residuals_case_1_kursawe1.inc  multi_plot_XYplt_residuals_case_1_kursawe2.inc  multi_plot_XYplt_residuals_case_2_w_{damped}.inc  multi_plot_XYplt_residuals_case_2_x_{max}.inc  multi_plot_cross_X1_X2_case_0.inc  (+1 more)
(+130 files in other folders)
