[metadata]
name = pymetamodels
version = attr: pymetamodels.__version__
author = F Lahuerta
author_email = flahuerta@itainnova.es
url = https://github.com/ITAINNOVA/pymetamodels.git
description = The pymetamodels package combines machine learning (ML) metamodeling and analysis tools for the virtual development of modeling systems within a common abstract framework implemented in an accessible and distributable Python package. The development of pymetamodels package is oriented to support ML applications in  material science, material informatics and the construction of materials, components and systems soft metamodels informed by hard physics-based modelling (continuum, mesosocopic, ... ) and experimental characterisations.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = pymetamodels, virtual, model, optimization, sensitivity, metamodeling, ML, mechanic, material, component, science
license = MIT
license_file = LICENSE.md
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Natural Language :: Spanish
    Operating System :: Unix
    Operating System :: Microsoft :: Windows
    Topic :: Scientific/Engineering :: Physics
    Topic :: Scientific/Engineering :: Information Analysis

[options]
python_requires = >= 3.8
packages = find_namespace:
zip_safe = True
include_package_data = True
install_requires =
    numpy
    scipy
    scikit-learn
    matplotlib
    SALib
    Pillow
    xlrd
    xlwt
    xlutils
package_dir=
    =src

[options.packages.find]
where=src

[options.extras_require]
docs =
    sphinx
    myst-parser
